# src/types/xahau.ts
@@ -92,6 +92,26 @@ export interface HookObject {
   PreviousTxnLgrSeq?: number;
 }
 
+export interface HookDefinitionObject {
+  LedgerEntryType: 'HookDefinition';
+  index?: string;
+  HookHash: HexString;
+  HookNamespace?: HexString;
+  HookOn?: HexString;
+  HookOnIncoming?: HexString;
+  HookOnOutgoing?: HexString;
+  HookCanEmit?: HexString;
+  HookName?: HexString;
+  HookApiVersion?: number;
+  HookParameters?: HookParameter[] | HookParameter;
+  CreateCode?: HexString;
+  HookSetTxnID?: HexString;
+  ReferenceCount?: string | number;
+  Fee?: string;
+  HookCallbackFee?: string;
+  Flags?: number;
+}
+
 export interface AccountRootObject {
   LedgerEntryType: 'AccountRoot';
   index?: string;
@@ -118,6 +138,7 @@ export type LedgerObject =
   | RippleStateObject
   | AccountRootObject
   | HookObject
+  | HookDefinitionObject
   | UnknownLedgerObject;
 
 export interface CreatedNode {
@@ -275,6 +296,10 @@ export function isAccountRoot(object: LedgerObject): object is AccountRootObject
 
 export function isHookObject(object: LedgerObject): object is HookObject {
   return object.LedgerEntryType === 'Hook';
+}
+
+export function isHookDefinition(object: LedgerObject): object is HookDefinitionObject {
+  return object.LedgerEntryType === 'HookDefinition';
 }
 
 export function isIssuedAmount(amount: Amount): amount is IssuedAmount {
